# TLC

./: jdk.table.xml  vcs.xml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/unipg/tlc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: kiss_fft.c  native-lib.cpp  provaMain.c
app/src/main/include/: _kiss_fft_guts.h  kiss_fft.h
app/src/main/java/unipg/tlc/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/unipg/tlc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
